@@ -832,7 +832,7 @@ int	main(int argc, char **argv)
 	if (ZBX_TASK_RUNTIME_CONTROL == t.task)
 		exit(SUCCEED == zbx_sigusr_send(t.data) ? EXIT_SUCCESS : EXIT_FAILURE);
 
-#ifdef HAVE_IPMI
+#ifdef HAVE_OPENIPMI
 	{
 		char *error = NULL;
 
@@ -1150,7 +1150,7 @@ void	zbx_on_exit(void)
 
 	zbx_sleep(2);	/* wait for all child processes to exit */
 
-#ifdef HAVE_IPMI
+#ifdef HAVE_OPENIPMI
 	zbx_ipc_service_free_env();
 #endif
 
